--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
         "psr-4": {
             "App\\": "app/"
         }
-    },
+    }, "files": [
+    "app/Constants/constants.php"
+    ],
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
