--- a/composer.json
+++ b/composer.json
@@ -26,13 +26,15 @@
         "psr-4": {
             "App\\": "app/"
         }
-    }, "files": [
-    "app/Constants/constants.php"
-    ],
+    },
+
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        },
+        "files": [
+            "app/Constants/constants.php"
+        ]
     },
     "extra": {
         "laravel": {
